add page Us and Contact and change router to HashRouter in app.tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,8 +75,7 @@
     "resolveJsonModule": true,
   },
   "include": [
-    "./src/**/*",
-    "./src/customsvg.d.ts",
+    "src",
     "./src/customimg.d.ts"
   ],
   "exclude": [
