--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "bootstrap": "5.0.2",
     "core-js": "^3.15.2",
     "fs-extra": "^10.0.0",
@@ -22,6 +24,7 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   },
